I updated the ASCII Text

--- a/index.html
+++ b/index.html
@@ -5,17 +5,52 @@
   <title>ASCII Art Gallery</title>
 </head>
 <body>
-  <h1>ASCII Art Gallery</h1>
+  <h1> My ASCII Art Gallery</h1>
   <pre>
-   (\_/)
-   ( •_•)
-   />🍪 Want a cookie?
+                                                   
+                                      (((((                                     
+                                     (((((((                                    
+                                       (((                                      
+                                    %  (((                                      
+                                      (((((                                     
+                                        .                                       
+                                        .%                                      
+                                        .%                                      
+                                       %.%                                      
+                                       %.%                                      
+                                       %/.                                      
+                                       %%.                                      
+                                       %%.                                      
+                                       %%.                                      
+                                       %%%                                      
+                                       %%%                                      
+                                       %%%                                      
+                                     ((%%%((                                    
+                                (((((((%%%(((((((                               
+                              (%(((((((%%%(((((((((                             
+                             ((((((((((%%%/(((((((((                            
+                             ((((((((((.%%((((((((((                            
+                             ((((((((((.%%%(((((((((                            
+                              #((((((((.%%%((((((((                             
+                               (%((((((.%%%(((((((                              
+                                (%(((((,%%%((((((                               
+                                ((((%%((((((%%(((                               
+                            /  (((((((((((((((%(%(  /                           
+                           ((((((((%((((((((((((((((((                          
+                          (((((((((%(((((((((((((((((((                         
+                         ((((((((%((((((((((((%%%(((((((                        
+                         %(((((((((((((((((((((((((((((%                        
+                         ((((((((((((((%%%.%((((((((((((                        
+                         ((((((((((((((%%%%(((((((((((((                        
+                          (((((((((((((%%%%(((((((((((%                         
+                           (%((((((((((&%%((((((((((%(                          
+                               (#(((((((%%(((((%((                              
+                                        %%                                      
+                                        %/                                      
+                                        %                                       
+                                                               ?
   </pre>
-  <pre>
-   ╔═════════╗
-   ║ ASCII   ║
-   ║   ART   ║
-   ╚═════════╝
+  
   </pre>
 </body>
 </html>
